<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reload_captcha"
        android:orderInCategory="100"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/action_captcha"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings_horario"
        android:orderInCategory="100"
        android:title="@string/action_horario_2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_config"
        android:orderInCategory="100"
        android:title="@string/action_config"
        app:showAsAction="never" />
</menu>
