<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_setear_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.luisnglbrv.sigma.SetearDatos"
    android:background="@color/background_default">
    <ImageView
        android:contentDescription="@string/content_splash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/splash"
        android:scaleType="centerCrop"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView" />

    <com.skyfishjy.library.RippleBackground
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contentRipple"
        app:rb_color="#eee"
        app:rb_radius="32dp"
        app:rb_rippleAmount="3"
        app:rb_duration="3000"
        app:rb_scale="6">
        <ImageView
            android:contentDescription="@string/content_app"
            android:layout_width="180dip"
            android:layout_height="180dip"
            app:srcCompat="@drawable/app"
            android:scaleType="fitXY"
            android:translationZ="16dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/appIconView" />

        <ProgressBar
            android:id="@+id/barraProgresoDatos"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/appIconView"
            android:layout_alignLeft="@+id/appIconView"
            android:layout_alignRight="@+id/appIconView"
            android:layout_alignStart="@+id/appIconView"
            android:layout_below="@+id/appIconView"
            android:layout_marginTop="31dp" />

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/borderlessButtonStyle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_regular"
            android:layout_alignEnd="@+id/barraProgresoDatos"
            android:layout_alignLeft="@+id/barraProgresoDatos"
            android:layout_alignRight="@+id/barraProgresoDatos"
            android:layout_alignStart="@+id/barraProgresoDatos"
            android:layout_below="@+id/barraProgresoDatos"
            android:layout_marginTop="12dp"
            android:text="@string/cancelString" />
    </com.skyfishjy.library.RippleBackground>
</RelativeLayout>
